welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: ';' expected but 'return' found.
if (x <3) {for (i <- 0 to x) {if (nums(i) == 9) {return true}} return false}
                                                               ^arrayFront9:5: error: ')' expected but 'return' found.
else (for (i <- 0 to 3) {if (nums(i) == 9) {return true}} return false})
                                                          ^arrayFront9:5: error: ';' expected but ')' found.
else (for (i <- 0 to 3) {if (nums(i) == 9) {return true}} return false})
                                                                       ^arrayFront9:7: error: Unmatched closing brace '}' ignored here
 }
 ^